3.0 update